trunk/Archive2/8c/83ee7db81f8959/output
main.cpp: In instantiation of 'struct VariantMap<FruitMap>':
main.cpp:21:19:   required from here
main.cpp:15:13: error: invalid use of incomplete type 'struct FruitMap'
     TValue& get(typename Base::template Key<TValue> base_key) {
             ^
main.cpp:6:8: error: forward declaration of 'struct FruitMap'
 struct FruitMap;
        ^
main.cpp: In function 'int main()':
main.cpp:33:23: error: 'struct FruitMap' has no member named 'get'
   int apple_value = f.get(FruitMap.Apple);
                       ^
main.cpp:33:35: error: expected primary-expression before '.' token
   int apple_value = f.get(FruitMap.Apple);
                                   ^
main.cpp:33:7: warning: unused variable 'apple_value' [-Wunused-variable]
   int apple_value = f.get(FruitMap.Apple);
       ^
